<resources>
    <string name="app_name">Ideelee+</string>
    <string name="welcometoideelee">Welcome to ideelee+</string>
    <string name="LOGIN">LOGIN</string>
    <string name="entermobilenumber">Enter Mobile Number</string>
    <string name="continue_">Continue</string>
    <string name="continuewithfacebook">Continue with facebook</string>
    <string name="donthaveanaccount">Don\'t have an Account?</string>
    <string name="registernow">Register Now</string>
    <string name="OR">OR</string>
    <string name="register">Register</string>
    <string name="fullname">Full Name</string>
    <string name="email">Email</string>
    <string name="alreadyhaveanaccount">Already have an Account?</string>
    <string name="loginnow">Login Now</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="title_activity_home_navigation">HomeNavigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="VastArray">Vast Array of services just with a single app</string>
    <string name="dott">....</string>
    <string name="electrician">Electrician</string>
    <string name="gardening">Gardening</string>
    <string name="carwash">Car Wash</string>
    <string name="vehiclewash">Vehicle Wash</string>
    <string name="massage">Massage</string>
    <string name="rentals">Rentals</string>
    <string name="babysitting">Baby Sitting</string>
    <string name="eventservices">Event Services</string>
    <string name="plumber">Plumber</string>
    <string name="maids">Maids</string>
    <string name="vehicle">Vehicle</string>
    <string name="towing">Towing</string>
    <string name="teaching">Teaching and Courses Services</string>
    <string name="carpentar">Carpentar</string>
    <string name="shoppingdelivery">Delivery Services</string>
    <string name="carriers">Carrier</string>
    <string name="moving">Moving and Lifting Services</string>
    <string name="handymanservices">Handyman Services</string>
    <string name="veterinary">Veterinary</string>
    <string name="homepainting">Home Painting</string>
    <string name="camping">Camping and Equipments For Rent</string>
    <string name="buycoupons">Buy Coupons</string>
    <string name="more">More</string>
    <string name="OTP">OTP</string>
    <string name="enterotp">Enter OTP</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="topratedserviceprovider">Top Rated Service Providers</string>
    <string name="home">HOME</string>
    <string name="profile">PROFILE</string>
    <string name="wallet">WALLET</string>
    <string name="booking">BOOKING</string>
    <string name="changeloction">Change Location</string>
    <string name="filter">Filter</string>
    <string name="relevance">Relevance</string>
    <string name="password">Password</string>
    <string name="user_or_phone">User or Phone</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="type_name_here">Type name here</string>
    <string name="phone_hint">Type mobile numbere here</string>
    <string name="address">Address</string>
    <string name="enter_your_address_here">Enter your address here...</string>
    <string name="manage_address">Manage Address</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="help_support"><![CDATA[Help & Support]]></string>
    <string name="my_orders">My Orders</string>
    <string name="manage_cards">Manage Cards</string>
    <string name="logout">Logout</string>
    <string name="invite_and_earn">Invite and Earn</string>
    <string name="lipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="enter_registered_email">Enter registered email</string>
    <string name="forgot">Forgot</string>
    <string name="login_now">Login Now</string>
    <string name="your_order">Your Order</string>
    <string name="coupen">Coupen</string>
    <string name="online_payment">Online Payment</string>
    <string name="_121_cresent_avenue_drybeck">121 Cresent Avenue, DRYBECK</string>
    <string name="submit">Submit</string>
    <string name="open_now">OPEN NOW</string>
    <string name="perperson">Per Person</string>
    <string name="permeal">Per Meal</string>
    <string name="get_5_off_on_order_above_101">Get $5 off on order above $101</string>
    <string name="ratingvalue">4.1</string>
    <string name="the_pepper_mockingbird">THE PEPPER MOCKINGBIRD</string>
    <string name="breakfast">BREAKFAST</string>
    <string name="view_cart">View Cart</string>
    <string name="lunch">Lunch</string>
    <string name="payment_mode">Payment Mode</string>
    <string name="plac_order">place order</string>
    <string name="additional_charges_if_any">Additional Charges (If any)</string>
    <string name="additional_charges_if_any">Additional Charges (If any)</string>
    <string name="terms_conditions"><![CDATA[TERMS & CONDITIONS]]></string>
    <string name="item_total">Item Total</string>
    <string name="per_hour">PER HOUR</string>
    <string name="car_rental">Car Rental</string>

    <string name="lbl_set_profile_photo">Set profile image</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>
    <string name="facebook_app_id">360409124669978</string>
    <string name="fb_login_protocol_scheme">fb360409124669978</string>

    <string name="material_calendar_monday">Mon</string>
    <string name="material_calendar_tuesday">Tue</string>
    <string name="material_calendar_wednesday">Wed</string>
    <string name="material_calendar_thursday">Thu</string>
    <string name="material_calendar_friday">Fri</string>
    <string name="material_calendar_saturday">Sat</string>
    <string name="material_calendar_sunday">Sun</string>
    <string name="continue_with_google">Continue with Google</string>
</resources>
