<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:padding="@dimen/med_padding" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="Jessica Ruby"
                 android:textColor="@color/black"
                android:textSize="@dimen/normal_text" />

            <TextView
                android:id="@+id/edit_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/big_margin"
                android:fontFamily="sans-serif"
                android:padding="@dimen/med_padding"
                android:gravity="center_vertical"
                android:drawablePadding="@dimen/small_padding"
                android:drawableLeft="@drawable/edit"
                android:text="Edit Profile"
                android:textColor="@color/black"
                android:textSize="@dimen/normal_text" />

            <TextView
                android:id="@+id/invite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:padding="@dimen/med_padding"
                android:gravity="center_vertical"
                android:drawablePadding="@dimen/small_padding"
                android:drawableLeft="@drawable/invite"
                android:text="@string/invite_friends"
                android:textColor="@color/black"
                android:textSize="@dimen/normal_text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:padding="@dimen/med_padding"
                android:gravity="center_vertical"
                android:drawablePadding="@dimen/small_padding"
                android:drawableLeft="@drawable/address"
                android:text="@string/manage_address"
                android:textColor="@color/black"
                android:textSize="@dimen/normal_text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:padding="@dimen/med_padding"
                android:gravity="center_vertical"
                android:drawablePadding="@dimen/small_padding"
                android:drawableLeft="@drawable/help"
                android:text="@string/help_support"
                android:textColor="@color/black"
                android:textSize="@dimen/normal_text" />

            <TextView
                android:id="@+id/orders"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                android:drawablePadding="@dimen/small_padding"
                android:drawableLeft="@drawable/cart"
                android:padding="@dimen/med_padding"
                android:text="@string/my_orders"
                android:textColor="@color/black"
                android:textSize="@dimen/normal_text" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:padding="@dimen/med_padding"
                android:visibility="gone"
                android:text="@string/manage_cards"
                android:textColor="@color/black"
                android:textSize="@dimen/normal_text" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:padding="@dimen/med_padding"
                android:gravity="center_vertical"
                android:drawablePadding="@dimen/small_padding"
                android:drawableLeft="@drawable/logout"
                android:text="@string/logout"
                android:textColor="@color/black"
                android:textSize="@dimen/normal_text" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>