<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".HomeScreen.HomeNavigation">


<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_above="@+id/navigationView"
    android:id="@+id/content_frame"/>



    <!--<android.support.design.widget.BottomNavigationView-->
        <!--android:id="@+id/navigationView"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--app:labelVisibilityMode="unlabeled"-->
        <!--android:background="?android:attr/windowBackground"-->
        <!--app:layout_constraintBottom_toBottomOf="parent"-->
        <!--app:layout_constraintLeft_toLeftOf="parent"-->
        <!--app:layout_constraintRight_toRightOf="parent"-->
        <!--app:itemIconTint="@color/navyblue"-->
        <!--app:itemTextColor="@color/black"-->
        <!--app:menu="@menu/bottom_navigation_menu"/>-->

    <LinearLayout
        android:id="@+id/navigationView"
        android:orientation="horizontal"
        android:paddingTop="@dimen/margin_4dp"
        android:background="#BCF1F1F1"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/home"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:text="@string/home"
            android:textSize="@dimen/small_txt"
            android:textColor="@color/black"
            android:gravity="center"
            android:drawableTop="@drawable/home"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/bookings"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:text="@string/booking"
            android:textSize="@dimen/small_txt"
            android:textColor="@color/black"
            android:gravity="center"
            android:drawableTop="@drawable/booking"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/wallet"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:text="@string/wallet"
            android:textSize="@dimen/small_txt"
            android:textColor="@color/black"
            android:gravity="center"
            android:drawableTop="@drawable/wallet"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/profile"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:text="@string/profile"
            android:textSize="@dimen/small_txt"
            android:textColor="@color/black"
            android:gravity="center"
            android:drawableTop="@drawable/profile"
            android:layout_height="match_parent" />

    </LinearLayout>

</RelativeLayout>