<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeScreen.ServiceActivity">

    <include layout="@layout/toolbar_child" />

    <ImageView
        android:id="@+id/img"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:scaleType="fitXY"
        android:src="@drawable/vehicle_img"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/margin_8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/location"
            android:drawablePadding="@dimen/margin_4dp"
            android:text="@string/changeloction"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_13sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:gravity="right"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_8dp"
                android:text="@string/filter"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_13sp" />

            <TextView
                android:id="@+id/relevance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/arrow_down"
                android:drawablePadding="@dimen/margin_4dp"
                android:text="@string/relevance"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_13sp" />
        </LinearLayout>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" />
</LinearLayout>