<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:padding="@dimen/margin_24dp"
android:background="@drawable/bg1"
android:orientation="vertical"
android:layout_height="match_parent"
tools:context=".Register">

<TextView
    android:layout_width="match_parent"
    android:textAlignment="center"
    android:layout_marginTop="@dimen/margin_28dp"
    android:layout_height="wrap_content"
    android:fontFamily="sans-serif"
    android:text="@string/REGISTER"
    android:textColor="@color/white"
    android:textSize="@dimen/text_size_23sp"
    android:textStyle="bold" />
<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"

    android:layout_marginTop="@dimen/margin_30dp"
    android:layout_height="wrap_content">


    <TextView
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/margin_24dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/fullname"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_17sp"
        />
    <EditText
        android:layout_width="match_parent"
        android:padding="@dimen/margin_12dp"
        android:layout_marginTop="@dimen/margin_8dp"
        android:background="@drawable/round_corner_edittext"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/margin_24dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/email"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_17sp"
        />
    <EditText
        android:layout_width="match_parent"
        android:padding="@dimen/margin_12dp"
        android:layout_marginTop="@dimen/margin_8dp"
        android:background="@drawable/round_corner_edittext"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/margin_24dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/entermobilenumber"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_17sp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="@dimen/margin_8dp"
        android:padding="@dimen/margin_8dp"
        android:background="@drawable/round_corner_edittext"
        android:layout_height="wrap_content">
        <com.rilixtech.CountryCodePicker
            android:id="@+id/ccp"
            android:layout_width="wrap_content"
            app:ccp_defaultNameCode="US"
            android:layout_height="wrap_content" />
        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/phone_number_edt"
            android:layout_width="match_parent"
            android:drawableTint="@color/white"
            android:background="@null"
            android:padding="@dimen/margin_4dp"
            android:backgroundTintMode="screen"
            android:backgroundTint="@color/white"
            android:layout_height="wrap_content"
            android:inputType="phone"/>

    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/margin_24dp"
        android:text="@string/CONTINUE"
        android:textColor="@color/white"
        android:textAllCaps="true"
        android:textSize="@dimen/text_size_17sp"
        android:background="@drawable/round_corner_button"
        android:layout_height="wrap_content" />


</LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_marginTop="@dimen/margin_40dp"
    android:orientation="horizontal"
    android:gravity="center"
    android:layout_gravity="center"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_17sp"
        android:text="@string/alreadyhaveanaccount"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="wrap_content"
        android:textColor="@color/yellow"
        android:id="@+id/ux_txt_loginnow_registerPage"
        android:layout_marginLeft="@dimen/margin_4dp"
        android:textSize="@dimen/text_size_17sp"
        android:text="@string/loginnow"
        android:layout_height="wrap_content" />
</LinearLayout>
</LinearLayout>